tests/NormalTests/paczka1/fuzzy1/38150027.err
Error in line 8: s9d S852 35,3
Error in line 15: adHMnp S225 17,08
Error in line 9: adHMnp S224 41,4
Error in line 11: s9d S225 55,4
Error in line 22: s9d S224 82,8
Error in line 27: RdXrkq5K09 S680 94,6
Error in line 16: adHMnp S225 66,4
